yyamamoto+sesetup@salesforce.com/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>相談分類</label>
        <picklist>
            <controllingField>Field14__c</controllingField>
            <picklistValues>
                <fullName>契約</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商取引</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>会社経営</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>再生・事業承継</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>知的財産</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>労働問題</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>個人相談</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>分類詳細</label>
        <picklist>
            <controllingField>Field10__c</controllingField>
            <picklistValues>
                <fullName>顧問契約</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書作成・チェック</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約締結交渉</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>金銭貸付</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>担保設定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>動産売買</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不動産取引（売買、賃貸借）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>債権回収</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>保全・執行</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>消費者取引</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>電子商取引</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>国際商取引</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>航空・海上運送</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>設立（定款・規則作成）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>株主総会指導</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>新株発行</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ストックオプションの導入</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>組織再編・M&amp;A（合併、分割、事業譲渡、デューディリジェンス）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>役員の解任</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>企業買収・防衛</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>株主代表訴訟</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>内部統制システム・コンプライアンス（社外取締役・監査役、内部通報制度外部窓口）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不祥事対応・調査</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>海外進出</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>金商法対応</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>親族内外承継</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>事業再生</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>会社更生</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>債務整理</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>相談・依頼受付日時</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>Group_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>依頼・相談キュー</label>
        <queue>Group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X00</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>評価中,新規</value>
        </filters>
        <label>00：コールリスト</label>
    </listViews>
    <listViews>
        <fullName>x01</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>評価済み,不要</value>
        </filters>
        <label>01. すべての未評価リード</label>
    </listViews>
    <listViews>
        <fullName>x02</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>02. 私の未読リード</label>
    </listViews>
    <listViews>
        <fullName>x03</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>03. 本日のリード</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>